--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,7 +7,21 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Height="50" Margin="76,45,0,0" VerticalAlignment="Top" Width="118"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="85" Margin="454,151,0,0" VerticalAlignment="Top" Width="146"/>
+        <Menu Height="25" VerticalAlignment="top">
+            <MenuItem Header="Файл" Height="25">
+                <MenuItem.Icon>
+                    <Image Source="\\sysprofiles.adm.vvsu.ru\STUDENTRPROFILES$\PandaBossTime\My Pictures\d.jpg"></Image>
+                </MenuItem.Icon>
+                <MenuItem Header="Открыть">
+                    <MenuItem Header="Файл 1" Click="MenuItem_Click_1"></MenuItem>
+                    <MenuItem Header="Файл 2" Click="MenuItem_Click_2"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="Сохранить"></MenuItem>
+                <MenuItem Header="Выйти" Click="MenuItem_Click"></MenuItem>
+            </MenuItem>
+        </Menu>
+        <Image Name="DisplayImage" HorizontalAlignment="Left" Height="222" Margin="98,98,0,0" VerticalAlignment="Top" Width="282"/>
 
     </Grid>
 </Window>
